--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -257,8 +257,8 @@
                               <div style="margin: 0px">
                                 <div style="margin-bottom: 48px">
                                   <section>
-                                    <div class="_2h22gn">
-                                      <div class="_169grxv2">
+                                    <div class="notification__container">
+                                      <div class="notification__container-wrapper">
                                         <div style="margin-bottom: 48px">
                                           <div>
                                             <h3
@@ -333,7 +333,7 @@
                                         </div>
                                         <span id="FMP-target"></span>
                                       </div>
-                                      <div class="_17pxz94u">
+                                      <div class="notification__question-wrapper">
                                         <div class="_16tcko6">
                                           <div
                                             style="
@@ -604,7 +604,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="_1wht7jl">
                           <div class="page-container">
                             <div
@@ -626,10 +626,10 @@
                                     <nav aria-label="Account">
                                       <ol class="breadcrumb">
                                         <li class="inline-block">
-                                          <span class="_121z06r2"
+                                          <span class="breadcrumb__text"
                                             ><a
                                               href="/account-settings"
-                                              class="_sgg9wmi"
+                                              class="breadcrumb__text-a"
                                               aria-busy="false"
                                               >Account</a
                                             ></span
@@ -662,7 +662,7 @@
                                           </div>
                                           <span
                                             aria-current="step"
-                                            class="_121z06r2"
+                                            class="breadcrumb__text"
                                             >Travel for work</span
                                           >
                                         </li>
@@ -674,14 +674,14 @@
                                         elementtiming="LCP-target"
                                         class="heading"
                                       >
-                                        <div class="_1yrl4d7p">
+                                        <div class="breadcrumb__text-secondary">
                                           Travel for work
                                         </div>
                                       </h1>
                                     </div>
                                   </div>
-                                  <div class="_2h22gn">
-                                    <div class="_169grxv2">
+                                  <div class="notification__container">
+                                    <div class="notification__container-wrapper">
                                       <div style="margin-bottom: 48px">
                                         <div>
                                           <h3
@@ -755,7 +755,7 @@
                                       </div>
                                       <span id="FMP-target"></span>
                                     </div>
-                                    <div class="_17pxz94u">
+                                    <div class="notification__question-wrapper">
                                       <div class="_16tcko6">
                                         <div
                                           style="
