--- a/basics.html
+++ b/basics.html
@@ -742,7 +742,7 @@
                                     ></path>
                                   </svg>
                                   <span class="_1lhojeb"
-                                    ><button type="button" class="_15rpys7s">
+                                    ><button type="button" class="tab__on-btn-container">
                                       Use my current location
                                     </button></span
                                   >
@@ -815,7 +815,7 @@
                                   <button
                                     data-testid="add-languages"
                                     type="button"
-                                    class="_15rpys7s"
+                                    class="tab__on-btn-container"
                                     data-bs-toggle="modal"
                                     data-bs-target="#modalAdditional"
                                   >
