--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -286,7 +286,7 @@
               <div class="_gqn5ll" aria-hidden="false">
                 <div class="_1l7bhkmt">
                   <div class="_fwc96">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <button class="_qa0cc5" type="button">
                         <div class="_66qnx8">
                           <div>Exit</div>
