--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -353,7 +353,7 @@
                     </div>
                   </div>
                   <div class="_fwc96">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <button class="_109k4q4" type="button">
                         <div class="_66qnx8">
                           <div>Save and exit</div>
@@ -543,7 +543,7 @@
                                         <!-- -->20
                                         <!-- -->% discount for your first 3
                                         guests to help you get booked faster.
-                                        <button type="button" class="_15rpys7s">
+                                        <button type="button" class="tab__on-btn-container">
                                           Learn more
                                         </button>
                                       </div>
