--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -5009,7 +5009,7 @@
                       <div class="button__mt-24">
                         <div class="_dmn8hc">
                           <div class="_4gelgl">
-                            <button type="button" class="_15rpys7s">
+                            <button type="button" class="tab__on-btn-container">
                               Cancel
                             </button>
                           </div>
