--- a/calendar_week.html
+++ b/calendar_week.html
@@ -3407,7 +3407,7 @@
                                   time zones, and these times are in high
                                   demand.</span
                                 ><span class="_yh3k1m">
-                                  <button type="button" class="_15rpys7s">
+                                  <button type="button" class="tab__on-btn-container">
                                     Show data
                                   </button></span
                                 >
