--- a/contact-host.html
+++ b/contact-host.html
@@ -1674,7 +1674,7 @@
                             <main id="site-content">
                               <form>
                                 <div>
-                                  <div class="_88xxct">
+                                  <div class="tab__content-visibility">
                                     <div>
                                       <div class="display__flex dir dir-ltr">
                                         <div
