--- a/covidsafety.html
+++ b/covidsafety.html
@@ -201,7 +201,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="_15rpys7s"
+                                            class="tab__on-btn-container"
                                           >
                                             <div class="_1xgmi9y">
                                               Learn more
@@ -281,7 +281,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="_15rpys7s"
+                                            class="tab__on-btn-container"
                                           >
                                             <div class="_1xgmi9y">
                                               Learn more
@@ -381,7 +381,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="_15rpys7s"
+                                            class="tab__on-btn-container"
                                           >
                                             <div class="_1xgmi9y">
                                               Learn more
@@ -462,7 +462,7 @@
                                           </div>
                                           <button
                                             type="button"
-                                            class="_15rpys7s"
+                                            class="tab__on-btn-container"
                                           >
                                             <div class="_1xgmi9y">
                                               Learn more
@@ -1409,7 +1409,7 @@
                               <div
                                 data-veloute="marketing_section_landing_page_faq"
                               >
-                                <div class="_2h22gn">
+                                <div class="notification__container">
                                   <div class="_19dmoalb">
                                     <div class="_7euvbh">
                                       <div
