--- a/edit/photos.html
+++ b/edit/photos.html
@@ -588,7 +588,7 @@
                                         <button
                                           aria-label="Add caption Photo 1 of 1"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -782,7 +782,7 @@
                                         <button
                                           aria-label="Add caption Photo 1 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -913,7 +913,7 @@
                                         <button
                                           aria-label="Add caption Photo 2 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1044,7 +1044,7 @@
                                         <button
                                           aria-label="Add caption Photo 3 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1175,7 +1175,7 @@
                                         <button
                                           aria-label="Add caption Photo 4 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1306,7 +1306,7 @@
                                         <button
                                           aria-label="Add caption Photo 5 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1437,7 +1437,7 @@
                                         <button
                                           aria-label="Add caption Photo 6 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1568,7 +1568,7 @@
                                         <button
                                           aria-label="Add caption Photo 7 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1699,7 +1699,7 @@
                                         <button
                                           aria-label="Add caption Photo 8 of 9"
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           <div class="_9d4he4">Add caption</div>
                                         </button>
@@ -1764,7 +1764,7 @@
                                       >
                                         <span class="_kedp3u">Library</span>
                                       </h2>
-                                      <button type="button" class="_15rpys7s">
+                                      <button type="button" class="tab__on-btn-container">
                                         Manage
                                       </button>
                                     </div>
@@ -2189,7 +2189,7 @@
                                         </div>
                                       </div>
                                       <div class="_p52oc2" style="width: 96px">
-                                        <button type="button" class="_15rpys7s">
+                                        <button type="button" class="tab__on-btn-container">
                                           9 photos
                                         </button>
                                       </div>
