--- a/help.html
+++ b/help.html
@@ -322,7 +322,7 @@
                                 >
                                   <div
                                     data-testid="audience-tab-list"
-                                    class="_qc3ank"
+                                    class="tab__list"
                                     role="tablist"
                                   >
                                     <button
@@ -330,7 +330,7 @@
                                       id="tab--role_tabs--0"
                                       aria-controls="panel--role_tabs--0"
                                       aria-selected="true"
-                                      class="_fd0fliz"
+                                      class="tab__list-btn-primary"
                                       role="tab"
                                     >
                                       Guest</button
@@ -339,7 +339,7 @@
                                       id="tab--role_tabs--1"
                                       aria-controls="panel--role_tabs--1"
                                       aria-selected="false"
-                                      class="_tns11i"
+                                      class="tab__list-btn-secondary"
                                       role="tab"
                                       tabindex="-1"
                                     >
@@ -349,7 +349,7 @@
                                       id="tab--role_tabs--2"
                                       aria-controls="panel--role_tabs--2"
                                       aria-selected="false"
-                                      class="_tns11i"
+                                      class="tab__list-btn-secondary"
                                       role="tab"
                                       tabindex="-1"
                                     >
@@ -359,7 +359,7 @@
                                       id="tab--role_tabs--3"
                                       aria-controls="panel--role_tabs--3"
                                       aria-selected="false"
-                                      class="_tns11i"
+                                      class="tab__list-btn-secondary"
                                       role="tab"
                                       tabindex="-1"
                                     >
