--- a/insights.html
+++ b/insights.html
@@ -171,7 +171,7 @@
             </div>
             <main id="site-content" class="_145b7he">
               <div class="_1unac3l">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <main id="site-content">
                     <div class="display__flex dir dir-ltr">
                       <div style="--gp-section-max-width: 1120px">
