--- a/login-security.html
+++ b/login-security.html
@@ -269,8 +269,8 @@
                                 </div>
                               </div>
                               <div class="relative">
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div style="margin-top: 32px">
                                       <section>
                                         <div class="_1mbllh6j">
@@ -490,7 +490,7 @@
                                                       <div class="_hgs47m">
                                                         <div class="va-top-h">
                                                           <div
-                                                            class="_121z06r2"
+                                                            class="breadcrumb__text"
                                                           >
                                                             <span tabindex="-1"
                                                               >Your new
@@ -963,7 +963,7 @@
                                       <span id="FMP-target"></span>
                                     </div>
                                   </div>
-                                  <div class="_17pxz94u">
+                                  <div class="notification__question-wrapper">
                                     <div class="_16tcko6">
                                       <section>
                                         <div
@@ -1244,7 +1244,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div style="margin: 0px">
                             <div style="margin-bottom: 48px">
@@ -1255,10 +1255,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -1291,7 +1291,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Login &amp; security</span
                                         >
                                       </li>
@@ -1303,14 +1303,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Login &amp; security
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div>
                                       <div class="relative">
                                         <div class="full__height-width">
@@ -1399,11 +1399,11 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_17pxz94u"><div></div></div>
+                                  <div class="notification__question-wrapper"><div></div></div>
                                 </div>
-                                <div class="_88xxct">
-                                  <div class="_2h22gn">
-                                    <div class="_169grxv2">
+                                <div class="tab__content-visibility">
+                                  <div class="notification__container">
+                                    <div class="notification__container-wrapper">
                                       <div style="margin-top: 32px">
                                         <section>
                                           <div class="_1mbllh6j">
@@ -1637,7 +1637,7 @@
                                                         <div class="_hgs47m">
                                                           <div class="va-top-h">
                                                             <div
-                                                              class="_121z06r2"
+                                                              class="breadcrumb__text"
                                                             >
                                                               <span
                                                                 tabindex="-1"
@@ -2124,7 +2124,7 @@
                                         <span id="FMP-target"></span>
                                       </div>
                                     </div>
-                                    <div class="_17pxz94u">
+                                    <div class="notification__question-wrapper">
                                       <div class="_16tcko6">
                                         <section>
                                           <div
