--- a/payment.html
+++ b/payment.html
@@ -50,7 +50,7 @@
                   <div class="page-shell">
                     <div class="_siy8gh">
                       <div class="display__flex dir dir-ltr">
-                        <div class="_88xxct">
+                        <div class="tab__content-visibility">
                           <div class="_18nz6sk" role="banner">
                             <a
                               class="header__brand"
@@ -93,7 +93,7 @@
                         <div class="_cne99n">
                           <div>
                             <div style="min-height: 100vh">
-                              <div class="_88xxct">
+                              <div class="tab__content-visibility">
                                 <div>
                                   <div class="display__flex dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
@@ -220,7 +220,7 @@
                                                         >
                                                       </div>
                                                       <div class="_a6h6ruo">
-                                                        <div class="_88xxct">
+                                                        <div class="tab__content-visibility">
                                                           <svg
                                                             viewBox="0 0 48 48"
                                                             xmlns="http://www.w3.org/2000/svg"
@@ -318,13 +318,13 @@
                                                         data-testid="checkout_platform.DATE_PICKER.edit"
                                                         aria-label="Edit dates"
                                                         type="button"
-                                                        class="_15rpys7s"
+                                                        class="tab__on-btn-container"
                                                       >
                                                         Edit
                                                       </button>
                                                     </div>
                                                   </div>
-                                                  <div class="_88xxct"></div>
+                                                  <div class="tab__content-visibility"></div>
                                                 </div>
                                               </div>
                                             </div>
@@ -363,14 +363,14 @@
                                                         data-testid="checkout_platform.GUEST_PICKER.edit"
                                                         aria-label="Edit Guests"
                                                         type="button"
-                                                        class="_15rpys7s"
+                                                        class="tab__on-btn-container"
                                                       >
                                                         Edit
                                                       </button>
                                                     </div>
                                                   </div>
                                                   <div>
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="_cne99n"
                                                       ></div>
@@ -497,7 +497,7 @@
                                                             <button
                                                               aria-label="Learn more about Pay Less Up Front"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="tab__on-btn-container"
                                                             >
                                                               More info
                                                             </button>
@@ -549,7 +549,7 @@
                                               >
                                                 <div>
                                                   <div>
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <section>
                                                         <div
                                                           data-testid="payment-option-dropdown-selector"
@@ -817,7 +817,7 @@
                                                 <div class="_4gelgl">
                                                   <button
                                                     type="button"
-                                                    class="_15rpys7s"
+                                                    class="tab__on-btn-container"
                                                   >
                                                     Enter a coupon
                                                   </button>
@@ -875,7 +875,7 @@
                                                     > </span
                                                   ><button
                                                     type="button"
-                                                    class="_15rpys7s"
+                                                    class="tab__on-btn-container"
                                                   >
                                                     Learn more
                                                   </button>
@@ -958,7 +958,7 @@
                                                 padding-bottom: 24px;
                                               "
                                             >
-                                              <div class="_88xxct">
+                                              <div class="tab__content-visibility">
                                                 <div>
                                                   <div
                                                     data-testid="submit-button"
@@ -1011,7 +1011,7 @@
                                                 crossorigin="anonymous"
                                                 href="https://a0.muscache.com/pictures/b1751353-5028-411b-92ea-45a1a958348c.json"
                                               />
-                                              <div class="_88xxct"></div>
+                                              <div class="tab__content-visibility"></div>
                                             </div>
                                           </div>
                                         </div>
@@ -1284,7 +1284,7 @@
                                                 data-section-id="PRICE_DETAIL"
                                               >
                                                 <div id="FMP-target">
-                                                  <div class="_88xxct">
+                                                  <div class="tab__content-visibility">
                                                     <div>
                                                       <div>
                                                         <div class="_dmn8hc">
@@ -1345,7 +1345,7 @@
                                                             id="MowebCurrencyPicker_trigger"
                                                             aria-label="Current currency: (PHP). Change payment currency"
                                                             type="button"
-                                                            class="_15rpys7s"
+                                                            class="tab__on-btn-container"
                                                           >
                                                             (PHP)
                                                           </button>
