--- a/preferences.html
+++ b/preferences.html
@@ -1902,7 +1902,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div
                             style="
@@ -1920,10 +1920,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -1956,7 +1956,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Global preferences</span
                                         >
                                       </li>
@@ -1968,14 +1968,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Global preferences
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div class="border-bottom-muted">
                                       <div style="margin-top: 24px">
                                         <div class="_hgs47m">
@@ -3302,7 +3302,7 @@
                                     </div>
                                     <span id="FMP-target"></span>
                                   </div>
-                                  <div class="_17pxz94u">
+                                  <div class="notification__question-wrapper">
                                     <div class="_16tcko6">
                                       <section>
                                         <div
