--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -273,7 +273,7 @@
                                   <div style="margin: 0px">
                                     <div style="margin-bottom: 48px">
                                       <section>
-                                        <div class="_2h22gn">
+                                        <div class="notification__container">
                                           <div class="_1xw8gzmn">
                                             <div
                                               id="account-settings-main-navigation-tabs"
@@ -284,7 +284,7 @@
                                                   data-testid="tab-list-wrapper"
                                                 >
                                                   <div
-                                                    class="_qc3ank"
+                                                    class="tab__list"
                                                     role="tablist"
                                                   >
                                                     <button
@@ -292,7 +292,7 @@
                                                       id="tab--account-settings-main-navigation-tabs--0"
                                                       aria-controls="panel--account-settings-main-navigation-tabs--0"
                                                       aria-selected="true"
-                                                      class="_fd0fliz"
+                                                      class="tab__list-btn-primary"
                                                       role="tab"
                                                     >
                                                       Data</button
@@ -301,7 +301,7 @@
                                                       id="tab--account-settings-main-navigation-tabs--1"
                                                       aria-controls="panel--account-settings-main-navigation-tabs--1"
                                                       aria-selected="false"
-                                                      class="_tns11i"
+                                                      class="tab__list-btn-secondary"
                                                       role="tab"
                                                       tabindex="-1"
                                                     >
@@ -311,7 +311,7 @@
                                                       id="tab--account-settings-main-navigation-tabs--2"
                                                       aria-controls="panel--account-settings-main-navigation-tabs--2"
                                                       aria-selected="false"
-                                                      class="_tns11i"
+                                                      class="tab__list-btn-secondary"
                                                       role="tab"
                                                       tabindex="-1"
                                                     >
@@ -618,7 +618,7 @@
                                                           Airbnb.
                                                           <button
                                                             type="button"
-                                                            class="_15rpys7s"
+                                                            class="tab__on-btn-container"
                                                           >
                                                             Learn more
                                                           </button>
@@ -887,7 +887,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div
                             style="
@@ -905,10 +905,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -941,7 +941,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Privacy &amp; sharing</span
                                         >
                                       </li>
@@ -953,14 +953,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Privacy and sharing
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div
                                       id="account-settings-main-navigation-tabs"
                                     >
@@ -969,13 +969,13 @@
                                           class="_1xkr92p"
                                           data-testid="tab-list-wrapper"
                                         >
-                                          <div class="_qc3ank" role="tablist">
+                                          <div class="tab__list" role="tablist">
                                             <button
                                               type="button"
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="_fd0fliz"
+                                              class="tab__list-btn-primary"
                                               role="tab"
                                             >
                                               Data</button
@@ -984,7 +984,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -994,7 +994,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -1275,7 +1275,7 @@
                                                   happening on Airbnb.
                                                   <button
                                                     type="button"
-                                                    class="_15rpys7s"
+                                                    class="tab__on-btn-container"
                                                   >
                                                     Learn more
                                                   </button>
@@ -1364,7 +1364,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_17pxz94u">
+                                  <div class="notification__question-wrapper">
                                     <div
                                       class="c108hjch dir dir-ltr"
                                       id="FMP-target"
