--- a/products.html
+++ b/products.html
@@ -1900,7 +1900,7 @@
                                                   <button
                                                     aria-label="Learn more"
                                                     type="button"
-                                                    class="_15rpys7s"
+                                                    class="tab__on-btn-container"
                                                   >
                                                     Learn more
                                                   </button>
@@ -2889,7 +2889,7 @@
                                                     <button
                                                       data-testid="location-modal-button"
                                                       type="button"
-                                                      class="_15rpys7s"
+                                                      class="tab__on-btn-container"
                                                     >
                                                       <span
                                                         class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -5927,7 +5927,7 @@
                                                                 role="button"
                                                                 aria-describedby="review_675691390681590266_title"
                                                                 type="button"
-                                                                class="_15rpys7s"
+                                                                class="tab__on-btn-container"
                                                               >
                                                                 <span
                                                                   class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -6115,7 +6115,7 @@
                                                                 role="button"
                                                                 aria-describedby="review_652537737999961308_title"
                                                                 type="button"
-                                                                class="_15rpys7s"
+                                                                class="tab__on-btn-container"
                                                               >
                                                                 <span
                                                                   class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -8454,7 +8454,7 @@
                             </div>
                             <main id="site-content">
                               <div class="cgx2eil dir dir-ltr">
-                                <div class="_88xxct">
+                                <div class="tab__content-visibility">
                                   <div>
                                     <div class="display__flex dir dir-ltr">
                                       <div
@@ -8553,7 +8553,7 @@
                                                       </button></span
                                                     >
                                                   </div>
-                                                  <div class="_88xxct">
+                                                  <div class="tab__content-visibility">
                                                     <div class="_y4w03w">
                                                       <div class="_1jdtwz4">
                                                         <div class="_c2acbp">
@@ -8660,7 +8660,7 @@
                                               data-section-id="HERO_DEFAULT"
                                               style="padding-top: 24px"
                                             >
-                                              <div class="_88xxct">
+                                              <div class="tab__content-visibility">
                                                 <div class="_z80d2i">
                                                   <div class="_9xgknn">
                                                     <div class="_168ht2w">
@@ -9265,7 +9265,7 @@
                                               >
                                                 <section>
                                                   <div>
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div class="flex">
                                                         <div class="_tqmy57">
                                                           <div class="_cv5qq4">
@@ -9630,7 +9630,7 @@
                                                     <button
                                                       aria-label="Learn more"
                                                       type="button"
-                                                      class="_15rpys7s"
+                                                      class="tab__on-btn-container"
                                                     >
                                                       Learn more
                                                     </button>
@@ -18197,7 +18197,7 @@
                                                   </h2></span
                                                 >
                                               </div>
-                                              <div class="_88xxct">
+                                              <div class="tab__content-visibility">
                                                 <div
                                                   class="r1f90fvr dir dir-ltr"
                                                 >
@@ -18387,7 +18387,7 @@
                                                   </div>
                                                 </div>
                                               </div>
-                                              <div class="_88xxct">
+                                              <div class="tab__content-visibility">
                                                 <div class="dir dir-ltr">
                                                   <div
                                                     class="ciubx2o dir dir-ltr"
@@ -18695,7 +18695,7 @@
                                                               role="button"
                                                               aria-describedby="review_675691390681590266_title"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="tab__on-btn-container"
                                                             >
                                                               <span
                                                                 class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -18881,7 +18881,7 @@
                                                               role="button"
                                                               aria-describedby="review_652537737999961308_title"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="tab__on-btn-container"
                                                             >
                                                               <span
                                                                 class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -19065,7 +19065,7 @@
                                                               role="button"
                                                               aria-describedby="review_599646423789115671_title"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="tab__on-btn-container"
                                                             >
                                                               <span
                                                                 class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -19265,7 +19265,7 @@
                                                               role="button"
                                                               aria-describedby="review_595306787895788222_title"
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="tab__on-btn-container"
                                                             >
                                                               <span
                                                                 class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -19550,7 +19550,7 @@
                                                   <button
                                                     data-testid="location-modal-button"
                                                     type="button"
-                                                    class="_15rpys7s"
+                                                    class="tab__on-btn-container"
                                                   >
                                                     <span
                                                       class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -19763,7 +19763,7 @@
                                                       --dls-baseColumn-leadingOffset-xl: 0;
                                                     "
                                                   >
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <ul
                                                         class="tq6hspd h1aqtv1m dir dir-ltr"
                                                       >
@@ -20051,7 +20051,7 @@
                                               padding-bottom: 48px;
                                             "
                                           >
-                                            <div class="_88xxct">
+                                            <div class="tab__content-visibility">
                                               <div
                                                 class="sewcpu6 dir dir-ltr"
                                                 style="--spacingBottom: 3"
@@ -20458,7 +20458,7 @@
                                                         >
                                                           <button
                                                             type="button"
-                                                            class="_15rpys7s"
+                                                            class="tab__on-btn-container"
                                                           >
                                                             <span
                                                               class="atm_9s_116y0ak atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"
@@ -20591,11 +20591,11 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_88xxct"></div>
-                                <div class="_88xxct"></div>
-                                <div class="_88xxct"></div>
-                                <div class="_88xxct"></div>
-                                <div class="_88xxct"></div>
+                                <div class="tab__content-visibility"></div>
+                                <div class="tab__content-visibility"></div>
+                                <div class="tab__content-visibility"></div>
+                                <div class="tab__content-visibility"></div>
+                                <div class="tab__content-visibility"></div>
                               </div>
                             </main>
                           </div>
