--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -417,10 +417,10 @@
                   <nav>
                     <ol class="breadcrumb">
                       <li class="inline-block">
-                        <span class="_121z06r2"
+                        <span class="breadcrumb__text"
                           ><a
                             href="/users/show"
-                            class="_sgg9wmi"
+                            class="breadcrumb__text-a"
                             aria-busy="false"
                             >Profile</a
                           ></span
@@ -448,7 +448,7 @@
                             ></path>
                           </svg>
                         </div>
-                        <span aria-current="step" class="_121z06r2"
+                        <span aria-current="step" class="breadcrumb__text"
                           >Reviews</span
                         >
                       </li>
@@ -456,7 +456,7 @@
                   </nav>
                   <div style="margin-top: 12px">
                     <h1 tabindex="-1" class="heading">
-                      <div class="_1yrl4d7p">Reviews by you</div>
+                      <div class="breadcrumb__text-secondary">Reviews by you</div>
                     </h1>
                   </div>
                 </div>
@@ -725,7 +725,7 @@
           <div class="inherit-hide-print">
             <div class="_dtnpit">
               <footer role="contentinfo">
-                <div class="_121z06r2">
+                <div class="breadcrumb__text">
                   <div>
                     <div class="footer-hr-lg">
                       <div style="margin-top: 16px; margin-bottom: 16px">
