--- a/profile.html
+++ b/profile.html
@@ -580,7 +580,7 @@
 
                                           <button
                                             type="button"
-                                            class="_15rpys7s"
+                                            class="tab__on-btn-container"
                                           >
                                             Learn more
                                           </button>
@@ -656,7 +656,7 @@
                                           <div class="_14h4uoc">
                                             <button
                                               type="button"
-                                              class="_15rpys7s"
+                                              class="tab__on-btn-container"
                                               data-veloute="user_profile_edit_button"
                                             >
                                               Edit profile</button
@@ -1040,7 +1040,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             <div>
                                               <button
                                                 type="button"
-                                                class="_15rpys7s"
+                                                class="tab__on-btn-container"
                                               >
                                                 Add more
                                               </button>
@@ -1178,7 +1178,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
 
                                               <button
                                                 type="button"
-                                                class="_15rpys7s"
+                                                class="tab__on-btn-container"
                                               >
                                                 Learn more
                                               </button>
@@ -1512,7 +1512,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         <div>
                                           <button
                                             type="button"
-                                            class="_15rpys7s"
+                                            class="tab__on-btn-container"
                                           >
                                             Report this profile
                                           </button>
@@ -1526,7 +1526,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                           </div>
                         </div>
                       </div>
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div
                           class="_1mb2uol"
                           data-veloute="user_profile_frame"
@@ -1735,7 +1735,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div>
                                       </div>
                                     </div>
-                                    <button type="button" class="_15rpys7s">
+                                    <button type="button" class="tab__on-btn-container">
                                       Learn more
                                     </button>
                                     about how confirming account info helps keep
@@ -1808,7 +1808,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     <div class="_14h4uoc">
                                       <button
                                         type="button"
-                                        class="_15rpys7s"
+                                        class="tab__on-btn-container"
                                         data-veloute="user_profile_edit_button"
                                       >
                                         Edit profile</button
@@ -2173,7 +2173,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                         </div>
                                       </div>
                                       <div>
-                                        <button type="button" class="_15rpys7s">
+                                        <button type="button" class="tab__on-btn-container">
                                           Add more
                                         </button>
                                       </div>
@@ -2304,7 +2304,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                             </div>
                                           </div>
                                         </div>
-                                        <button type="button" class="_15rpys7s">
+                                        <button type="button" class="tab__on-btn-container">
                                           Learn more
                                         </button>
                                         about how confirming account info helps
@@ -2659,7 +2659,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                     <div class="_1k2miji"></div>
                                   </div>
                                   <div>
-                                    <button type="button" class="_15rpys7s">
+                                    <button type="button" class="tab__on-btn-container">
                                       Report this profile
                                     </button>
                                   </div>
