--- a/resolutions.html
+++ b/resolutions.html
@@ -41,7 +41,7 @@
           <div>
             <header>
               <div class="_t4e07m">
-                <div class="_7ytxmo">
+                <div class="tab__checkbox-mr-16">
                   <svg
                     viewBox="0 0 1000 1000"
                     role="img"
@@ -160,7 +160,7 @@
                           for="intent-send-money-row-radio-button"
                           class="cursor-pointer"
                           ><div class="flex">
-                            <div class="_7ytxmo">
+                            <div class="tab__checkbox-mr-16">
                               <input
                                 aria-labelledby="intent-send-money-row-title"
                                 aria-describedby="intent-send-money-row-subtitle"
@@ -191,7 +191,7 @@
                           for="intent-request-money-row-radio-button"
                           class="cursor-pointer"
                           ><div class="flex">
-                            <div class="_7ytxmo">
+                            <div class="tab__checkbox-mr-16">
                               <input
                                 aria-labelledby="intent-request-money-row-title"
                                 aria-describedby="intent-request-money-row-subtitle"
