--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -41,7 +41,7 @@
           <div>
             <header>
               <div class="_t4e07m">
-                <div class="_7ytxmo">
+                <div class="tab__checkbox-mr-16">
                   <svg
                     viewBox="0 0 1000 1000"
                     role="img"
@@ -90,7 +90,7 @@
                               d="m12 4 11.2928932 11.2928932c.3905243.3905243.3905243 1.0236893 0 1.4142136l-11.2928932 11.2928932"
                             ></path>
                           </g></svg></span></span
-                    ><button type="button" class="_15rpys7s">
+                    ><button type="button" class="tab__on-btn-container">
                       Add details
                     </button>
                   </li>
@@ -214,7 +214,7 @@
                       <h2 class="_zmovaf">Payment method</h2>
                       <div>
                         <div>
-                          <div class="_88xxct">
+                          <div class="tab__content-visibility">
                             <section>
                               <div
                                 data-testid="payment-option-dropdown-selector"
