--- a/resources.html
+++ b/resources.html
@@ -417,7 +417,7 @@
                                       >Experience hosting&nbsp;resources</span
                                     >
                                   </div>
-                                  <div class="_88xxct">
+                                  <div class="tab__content-visibility">
                                     <span
                                       class="_y9cbsa"
                                       style="
@@ -444,7 +444,7 @@
                                     hosting&nbsp;journey</span
                                   >
                                 </div>
-                                <div class="_88xxct">
+                                <div class="tab__content-visibility">
                                   <span
                                     class="_y9cbsa"
                                     style="
@@ -1191,7 +1191,7 @@
                                                     href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -1295,7 +1295,7 @@
                                                     href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -1400,7 +1400,7 @@
                                                     href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -1505,7 +1505,7 @@
                                                     href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -1610,7 +1610,7 @@
                                                     href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -1714,7 +1714,7 @@
                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -1918,7 +1918,7 @@
                                                     href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2022,7 +2022,7 @@
                                                     href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2127,7 +2127,7 @@
                                                     href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2232,7 +2232,7 @@
                                                     href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2337,7 +2337,7 @@
                                                     href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2441,7 +2441,7 @@
                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2645,7 +2645,7 @@
                                                     href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2749,7 +2749,7 @@
                                                     href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2854,7 +2854,7 @@
                                                     href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -2959,7 +2959,7 @@
                                                     href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -3064,7 +3064,7 @@
                                                     href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -3168,7 +3168,7 @@
                                                     href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                                     class="_11eqlma4"
                                                     ><div class="relative">
-                                                      <div class="_88xxct">
+                                                      <div class="tab__content-visibility">
                                                         <div
                                                           class="lite-image"
                                                           style="
@@ -3370,7 +3370,7 @@
                                                   href="/resources/hosting-experiences/a/the-3-pillars-of-a-quality-experience-387"
                                                   class="_11eqlma4"
                                                   ><div class="relative">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="lite-image"
                                                         style="
@@ -3473,7 +3473,7 @@
                                                   href="/resources/hosting-experiences/a/these-simple-host-tools-can-help-attract-more-guests-479"
                                                   class="_11eqlma4"
                                                   ><div class="relative">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="lite-image"
                                                         style="
@@ -3577,7 +3577,7 @@
                                                   href="/resources/hosting-experiences/a/create-a-video-for-your-in-person-experience-446"
                                                   class="_11eqlma4"
                                                   ><div class="relative">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="lite-image"
                                                         style="
@@ -3680,7 +3680,7 @@
                                                   href="/resources/hosting-experiences/a/your-guide-to-a-standout-experience-page-398"
                                                   class="_11eqlma4"
                                                   ><div class="relative">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="lite-image"
                                                         style="
@@ -3783,7 +3783,7 @@
                                                   href="/resources/hosting-experiences/a/photo-requirements-for-experiences-386"
                                                   class="_11eqlma4"
                                                   ><div class="relative">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="lite-image"
                                                         style="
@@ -3886,7 +3886,7 @@
                                                   href="/resources/hosting-experiences/a/setting-a-pricing-strategy-for-your-experience-397"
                                                   class="_11eqlma4"
                                                   ><div class="relative">
-                                                    <div class="_88xxct">
+                                                    <div class="tab__content-visibility">
                                                       <div
                                                         class="lite-image"
                                                         style="
@@ -4917,7 +4917,7 @@
                                   class="_131n1yh"
                                   ><div class="_91gafw">
                                     <div class="_18dgbyf">
-                                      <div class="_88xxct">
+                                      <div class="tab__content-visibility">
                                         <span
                                           class="_y9cbsa"
                                           style="
@@ -4929,7 +4929,7 @@
                                         >
                                       </div>
                                     </div>
-                                    <div class="_88xxct">
+                                    <div class="tab__content-visibility">
                                       <div class="_goqbqk">
                                         <span
                                           class="_y9cbsa"
@@ -4974,7 +4974,7 @@
                                   class="_131n1yh"
                                   ><div class="_91gafw">
                                     <div class="_18dgbyf">
-                                      <div class="_88xxct">
+                                      <div class="tab__content-visibility">
                                         <span
                                           class="_y9cbsa"
                                           style="
@@ -4986,7 +4986,7 @@
                                         >
                                       </div>
                                     </div>
-                                    <div class="_88xxct">
+                                    <div class="tab__content-visibility">
                                       <div class="_goqbqk">
                                         <span
                                           class="_y9cbsa"
