--- a/signup_login.html
+++ b/signup_login.html
@@ -1969,7 +1969,7 @@
                                   </div>
                                   <p class="_4ivcik">
                                     <span>Didn't get a code? </span
-                                    ><button type="button" class="_15rpys7s">
+                                    ><button type="button" class="tab__on-btn-container">
                                       More options
                                     </button>
                                   </p>
@@ -2703,7 +2703,7 @@
                                               <div class="_slm4k1">
                                                 <button
                                                   type="button"
-                                                  class="_15rpys7s"
+                                                  class="tab__on-btn-container"
                                                 >
                                                   Show
                                                 </button>
@@ -2747,7 +2747,7 @@
                                               <div class="_slm4k1">
                                                 <button
                                                   type="button"
-                                                  class="_15rpys7s"
+                                                  class="tab__on-btn-container"
                                                 >
                                                   Show
                                                 </button>
@@ -3217,7 +3217,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="_qrzeuh" role="group">
                           <div data-login-signup class="_1y9y8er">
                             <header
@@ -4453,7 +4453,7 @@
                                 <div class="_1x0diny1">
                                   <div class="_16fq9mb">or</div>
                                 </div>
-                                <div class="_88xxct">
+                                <div class="tab__content-visibility">
                                   <div class="_88sa87">
                                     <div class="_jwti9r">
                                       <form
@@ -5007,7 +5007,7 @@
                                 </div>
                                 <p class="_4ivcik">
                                   <span>Didn't get a code? </span
-                                  ><button type="button" class="_15rpys7s">
+                                  ><button type="button" class="tab__on-btn-container">
                                     More options
                                   </button>
                                 </p>
@@ -5732,7 +5732,7 @@
                                             <div class="_slm4k1">
                                               <button
                                                 type="button"
-                                                class="_15rpys7s"
+                                                class="tab__on-btn-container"
                                               >
                                                 Show
                                               </button>
@@ -5776,7 +5776,7 @@
                                             <div class="_slm4k1">
                                               <button
                                                 type="button"
-                                                class="_15rpys7s"
+                                                class="tab__on-btn-container"
                                               >
                                                 Show
                                               </button>
@@ -6769,7 +6769,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="_qrzeuh" role="group">
                           <div class="_1y9y8er">
                             <header
@@ -6955,7 +6955,7 @@
                                           <div class="_slm4k1">
                                             <button
                                               type="button"
-                                              class="_15rpys7s"
+                                              class="tab__on-btn-container"
                                             >
                                               Show
                                             </button>
