--- a/specific_trip.html
+++ b/specific_trip.html
@@ -1204,7 +1204,7 @@
                                                           >
                                                           <button
                                                             type="button"
-                                                            class="_15rpys7s"
+                                                            class="tab__on-btn-container"
                                                           >
                                                             Show
                                                             original&nbsp;language
@@ -1476,7 +1476,7 @@
                                                               7 USD slot… </span
                                                             ><button
                                                               type="button"
-                                                              class="_15rpys7s"
+                                                              class="tab__on-btn-container"
                                                             >
                                                               Show full details
                                                             </button></span
