--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1167,7 +1167,7 @@
                               </div>
                             </div>
                             <div class="">
-                              <div class="_1xq6rjf">
+                              <div class="margin__y-24">
                                 <fieldset class="_25bp3z" role="radiogroup">
                                   <legend class="_1wjt7fx">
                                     <div class="inline">
