--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1411,7 +1411,7 @@
                                     Invite interpreters, caregivers, or support
                                     professionals to join the guests they’re
                                     assisting at no additional cost.
-                                    <button type="button" class="_15rpys7s">
+                                    <button type="button" class="tab__on-btn-container">
                                       Learn more
                                     </button>
                                   </div>
