--- a/submission/about.html
+++ b/submission/about.html
@@ -1062,7 +1062,7 @@
                             </div>
                             <div class="_13jnc9w">
                               <div class="">
-                                <div class="_1xq6rjf">
+                                <div class="margin__y-24">
                                   <fieldset class="_25bp3z" role="radiogroup">
                                     <legend class="_1wjt7fx">
                                       <div class="inline">
@@ -1133,7 +1133,7 @@
                                 class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                               >
                                 <div class="flex">
-                                  <div class="_7ytxmo">
+                                  <div class="tab__checkbox-mr-16">
                                     <div class="_1tn24b0o">
                                       <div
                                         class="img-middle"
