--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1214,7 +1214,7 @@
                                     aria-label="Add another item to: What guests need to bring"
                                     data-testid="add-packing-list-item-link"
                                     type="button"
-                                    class="_15rpys7s"
+                                    class="tab__on-btn-container"
                                   >
                                     Add another item
                                   </button>
