--- a/submission/video.html
+++ b/submission/video.html
@@ -1195,7 +1195,7 @@
                                           <div class="_1x9jv5f">
                                             <button
                                               type="button"
-                                              class="_15rpys7s"
+                                              class="tab__on-btn-container"
                                             >
                                               Upload
                                             </button>
