--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1107,7 +1107,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   >
                                 </div>
                                 <div class="_63wpx2">
-                                  <button type="button" class="_15rpys7s">
+                                  <button type="button" class="tab__on-btn-container">
                                     Show examples
                                   </button>
                                 </div>
@@ -1282,7 +1282,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             </div>
                             <div class="_uflomg">
                               <div class="">
-                                <div class="_1xq6rjf">
+                                <div class="margin__y-24">
                                   <div class="_1f785j7">
                                     <div class="inline">
                                       Where will you broadcast from?
