--- a/transaction_history.html
+++ b/transaction_history.html
@@ -41,7 +41,7 @@
           <div>
             <div>
               <div class="dir dir-ltr" style="--vh: 8.65px">
-                <div class="_88xxct">
+                <div class="tab__content-visibility">
                   <div class="display__flex dir dir-ltr">
                     <div
                       style="--gp-section-max-width: 1120px"
@@ -498,7 +498,7 @@
                                     elementtiming="LCP-target"
                                     class="heading"
                                   >
-                                    <div class="_1yrl4d7p">
+                                    <div class="breadcrumb__text-secondary">
                                       Transaction History
                                     </div>
                                   </h1>
@@ -629,7 +629,7 @@
                                     <div>
                                       <div>
                                         <div>
-                                          <div class="_2h22gn">
+                                          <div class="notification__container">
                                             <div class="_j6urmsh">
                                               <div class="relative">
                                                 <div class="_9hxttoo">
@@ -718,7 +718,7 @@
                                               </div>
                                             </div>
                                             <div class="_1of3n47t">
-                                              <div class="_2h22gn">
+                                              <div class="notification__container">
                                                 <div class="_kl7szni">
                                                   <div
                                                     style="
