--- a/trips.html
+++ b/trips.html
@@ -180,7 +180,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="display__flex dir dir-ltr">
                           <div style="--gp-section-max-width: 1440px">
                             <div class="section-container">
