--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -148,7 +148,7 @@
                     </div>
                   </div>
                   <div class="_fwc96">
-                    <div class="_88xxct">
+                    <div class="tab__content-visibility">
                       <button class="_qa0cc5" type="button">
                         <div class="_66qnx8">
                           <div>Save and exit</div>
