--- a/edit/about.html
+++ b/edit/about.html
@@ -458,7 +458,7 @@
                                           class="explore-filter-menu__list-padding explore-filter-menu__list-padding--reset dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_7ytxmo">
+                                            <div class="tab__checkbox-mr-16">
                                               <div class="_1tn24b0o">
                                                 <div
                                                   class="img-middle"
