--- a/payments/guest-contributions.html
+++ b/payments/guest-contributions.html
@@ -270,8 +270,8 @@
                                 </div>
                               </div>
                               <div class="relative">
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div style="margin-top: 36px">
                                       <div class="_o7z5pg" data-testid="title">
                                         Guest contributions
@@ -652,7 +652,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div
                             style="
@@ -670,10 +670,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -706,7 +706,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Payments &amp; payouts</span
                                         >
                                       </li>
@@ -718,14 +718,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Payments &amp; payouts
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div>
                                       <div class="relative">
                                         <div class="full__height-width">
@@ -847,13 +847,13 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_17pxz94u"><div></div></div>
+                                  <div class="notification__question-wrapper"><div></div></div>
                                 </div>
                                 <div dir="ltr">
                                   <div data-theme="" class="t1bgcr6e">
                                     <div>
-                                      <div class="_2h22gn">
-                                        <div class="_169grxv2">
+                                      <div class="notification__container">
+                                        <div class="notification__container-wrapper">
                                           <div style="margin-top: 36px">
                                             <div
                                               class="_o7z5pg"
