--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -333,7 +333,7 @@
                                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                                   >
                                                     <div class="flex">
-                                                      <div class="_7ytxmo">
+                                                      <div class="tab__checkbox-mr-16">
                                                         <div class="_oyq8vf">
                                                           <div class="_18k2iy">
                                                             <svg
@@ -888,7 +888,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div
                             style="
@@ -906,10 +906,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -942,7 +942,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Payments &amp; payouts</span
                                         >
                                       </li>
@@ -954,14 +954,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Payments &amp; payouts
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div
                                       id="account-settings-main-navigation-tabs"
                                     >
@@ -970,13 +970,13 @@
                                           class="_1xkr92p"
                                           data-testid="tab-list-wrapper"
                                         >
-                                          <div class="_qc3ank" role="tablist">
+                                          <div class="tab__list" role="tablist">
                                             <button
                                               type="button"
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="_fd0fliz"
+                                              class="tab__list-btn-primary"
                                               role="tab"
                                             >
                                               Payments</button
@@ -985,7 +985,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -995,7 +995,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -1005,7 +1005,7 @@
                                               id="tab--account-settings-main-navigation-tabs--3"
                                               aria-controls="panel--account-settings-main-navigation-tabs--3"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -1017,7 +1017,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_17pxz94u"><div></div></div>
+                                  <div class="notification__question-wrapper"><div></div></div>
                                 </div>
                                 <div dir="ltr">
                                   <div data-theme="" class="t1bgcr6e">
@@ -1081,7 +1081,7 @@
                                                     class="explore-filter-menu__list-padding dir dir-ltr"
                                                   >
                                                     <div class="flex">
-                                                      <div class="_7ytxmo">
+                                                      <div class="tab__checkbox-mr-16">
                                                         <div class="_oyq8vf">
                                                           <div class="_18k2iy">
                                                             <svg
