--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -570,7 +570,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div
                             style="
@@ -588,10 +588,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -624,7 +624,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Payments &amp; payouts</span
                                         >
                                       </li>
@@ -636,14 +636,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Payments &amp; payouts
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div
                                       id="account-settings-main-navigation-tabs"
                                     >
@@ -652,13 +652,13 @@
                                           class="_1xkr92p"
                                           data-testid="tab-list-wrapper"
                                         >
-                                          <div class="_qc3ank" role="tablist">
+                                          <div class="tab__list" role="tablist">
                                             <button
                                               type="button"
                                               id="tab--account-settings-main-navigation-tabs--0"
                                               aria-controls="panel--account-settings-main-navigation-tabs--0"
                                               aria-selected="true"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                             >
                                               Payments</button
@@ -667,7 +667,7 @@
                                               id="tab--account-settings-main-navigation-tabs--1"
                                               aria-controls="panel--account-settings-main-navigation-tabs--1"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -677,7 +677,7 @@
                                               id="tab--account-settings-main-navigation-tabs--2"
                                               aria-controls="panel--account-settings-main-navigation-tabs--2"
                                               aria-selected="false"
-                                              class="_fd0fliz"
+                                              class="tab__list-btn-primary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -687,7 +687,7 @@
                                               id="tab--account-settings-main-navigation-tabs--3"
                                               aria-controls="panel--account-settings-main-navigation-tabs--3"
                                               aria-selected="false"
-                                              class="_tns11i"
+                                              class="tab__list-btn-secondary"
                                               role="tab"
                                               tabindex="-1"
                                             >
@@ -699,7 +699,7 @@
                                       </div>
                                     </div>
                                   </div>
-                                  <div class="_17pxz94u"><div></div></div>
+                                  <div class="notification__question-wrapper"><div></div></div>
                                 </div>
                                 <div dir="ltr">
                                   <div data-theme="" class="t1bgcr6e">
