--- a/personal-info.html
+++ b/personal-info.html
@@ -3603,7 +3603,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div
                             style="
@@ -3621,10 +3621,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -3657,7 +3657,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Personal info</span
                                         >
                                       </li>
@@ -3669,12 +3669,12 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">Personal info</div>
+                                      <div class="breadcrumb__text-secondary">Personal info</div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div></div>
                                     <div class="border-bottom-muted">
                                       <div
@@ -7767,7 +7767,7 @@
                                     </div>
                                     <span id="FMP-target"></span>
                                   </div>
-                                  <div class="_17pxz94u">
+                                  <div class="notification__question-wrapper">
                                     <div class="_1heub6i">
                                       <svg
                                         viewBox="0 0 48 48"
