--- a/places.html
+++ b/places.html
@@ -405,7 +405,7 @@
                                         ><span aria-hidden="true"> · </span
                                         ><button
                                           type="button"
-                                          class="_15rpys7s"
+                                          class="tab__on-btn-container"
                                         >
                                           Explore nearby experiences
                                         </button>
@@ -16616,7 +16616,7 @@
                                   class="explore-filter-menu__list-padding cngiwj8 dir dir-ltr"
                                 >
                                   <div class="flex">
-                                    <div class="_7ytxmo">
+                                    <div class="tab__checkbox-mr-16">
                                       <div class="_oyq8vf">
                                         <svg
                                           viewBox="0 0 16 16"
