--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -600,7 +600,7 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_88xxct">
+                      <div class="tab__content-visibility">
                         <div class="page-container">
                           <div style="margin: 0px">
                             <div style="margin-bottom: 48px">
@@ -611,10 +611,10 @@
                                   <nav aria-label="Account">
                                     <ol class="breadcrumb">
                                       <li class="inline-block">
-                                        <span class="_121z06r2"
+                                        <span class="breadcrumb__text"
                                           ><a
                                             href="/account-settings"
-                                            class="_sgg9wmi"
+                                            class="breadcrumb__text-a"
                                             aria-busy="false"
                                             >Account</a
                                           ></span
@@ -647,7 +647,7 @@
                                         </div>
                                         <span
                                           aria-current="step"
-                                          class="_121z06r2"
+                                          class="breadcrumb__text"
                                           >Professional hosting tools</span
                                         >
                                       </li>
@@ -659,14 +659,14 @@
                                       elementtiming="LCP-target"
                                       class="heading"
                                     >
-                                      <div class="_1yrl4d7p">
+                                      <div class="breadcrumb__text-secondary">
                                         Professional hosting tools
                                       </div>
                                     </h1>
                                   </div>
                                 </div>
-                                <div class="_2h22gn">
-                                  <div class="_169grxv2">
+                                <div class="notification__container">
+                                  <div class="notification__container-wrapper">
                                     <div class="_1okh7pi0">
                                       <div class="flex-bar">
                                         <div class="flex-bar-item-grow">
@@ -902,7 +902,7 @@
                                     </div>
                                     <span id="FMP-target"></span>
                                   </div>
-                                  <div class="_17pxz94u"><div></div></div>
+                                  <div class="notification__question-wrapper"><div></div></div>
                                 </div>
                               </section>
                             </div>
