--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -36,7 +36,7 @@
           <div>
             <header>
               <div class="_t4e07m">
-                <div class="_7ytxmo">
+                <div class="tab__checkbox-mr-16">
                   <svg
                     viewBox="0 0 1000 1000"
                     role="img"
@@ -184,7 +184,7 @@
                             for="reason-GUEST_OFFER_DAMAGE-row-radio-button"
                             class="cursor-pointer"
                             ><div class="flex">
-                              <div class="_7ytxmo">
+                              <div class="tab__checkbox-mr-16">
                                 <input
                                   aria-labelledby="reason-GUEST_OFFER_DAMAGE-row-title"
                                   aria-describedby="reason-GUEST_OFFER_DAMAGE-row-subtitle"
@@ -214,7 +214,7 @@
                             for="reason-GUEST_OFFER_EXTRA-row-radio-button"
                             class="cursor-pointer"
                             ><div class="flex">
-                              <div class="_7ytxmo">
+                              <div class="tab__checkbox-mr-16">
                                 <input
                                   aria-labelledby="reason-GUEST_OFFER_EXTRA-row-title"
                                   aria-describedby="reason-GUEST_OFFER_EXTRA-row-subtitle"
@@ -253,7 +253,7 @@
                             for="reason-GUEST_OFFER_OTHER-row-radio-button"
                             class="cursor-pointer"
                             ><div class="flex">
-                              <div class="_7ytxmo">
+                              <div class="tab__checkbox-mr-16">
                                 <input
                                   aria-labelledby="reason-GUEST_OFFER_OTHER-row-title"
                                   aria-describedby="reason-GUEST_OFFER_OTHER-row-subtitle"
