--- a/reviews.html
+++ b/reviews.html
@@ -78,7 +78,7 @@
                               >
                             </div>
                           </div>
-                          <button type="button" class="_15rpys7s">
+                          <button type="button" class="tab__on-btn-container">
                             Save and exit
                           </button>
                         </div>
@@ -376,7 +376,7 @@
                                         ><div class="flex">
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_high-row-title"
@@ -411,7 +411,7 @@
                                         for="expectations_option_very_high-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_7ytxmo">
+                                          <div class="tab__checkbox-mr-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_very_high-row-title"
@@ -424,7 +424,7 @@
                                           </div>
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_high-row-title"
@@ -455,7 +455,7 @@
                                         ><div class="flex">
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_high-row-title"
@@ -490,7 +490,7 @@
                                         for="expectations_option_high-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_7ytxmo">
+                                          <div class="tab__checkbox-mr-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_high-row-title"
@@ -503,7 +503,7 @@
                                           </div>
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_high-row-title"
@@ -534,7 +534,7 @@
                                         ><div class="flex">
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_neutral-row-title"
@@ -569,7 +569,7 @@
                                         for="expectations_option_neutral-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_7ytxmo">
+                                          <div class="tab__checkbox-mr-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_neutral-row-title"
@@ -582,7 +582,7 @@
                                           </div>
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_neutral-row-title"
@@ -613,7 +613,7 @@
                                         ><div class="flex">
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_low-row-title"
@@ -648,7 +648,7 @@
                                         for="expectations_option_low-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_7ytxmo">
+                                          <div class="tab__checkbox-mr-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_low-row-title"
@@ -661,7 +661,7 @@
                                           </div>
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_low-row-title"
@@ -692,7 +692,7 @@
                                         ><div class="flex">
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_low-row-title"
@@ -727,7 +727,7 @@
                                         for="expectations_option_very_low-row-radio-button"
                                         class="cursor-pointer"
                                         ><div class="flex">
-                                          <div class="_7ytxmo">
+                                          <div class="tab__checkbox-mr-16">
                                             <input
                                               name="expectations_question_component"
                                               aria-labelledby="expectations_option_very_low-row-title"
@@ -740,7 +740,7 @@
                                           </div>
                                           <div class="explore-filter-menu__list-label">
                                             <div class="flex">
-                                              <div class="_7ytxmo"></div>
+                                              <div class="tab__checkbox-mr-16"></div>
                                               <div>
                                                 <div
                                                   id="expectations_option_very_low-row-title"
@@ -1353,7 +1353,7 @@
                             <div class="_zmebr8n">
                               <div class="_1g0w9mx">
                                 <div class="_13ea8wp hidden">
-                                  <button type="button" class="_15rpys7s">
+                                  <button type="button" class="tab__on-btn-container">
                                     <span>Back</span>
                                   </button>
                                 </div>
