--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1114,7 +1114,7 @@
                             </div>
                             <div class="_1tluusc">
                               <div class="">
-                                <div class="_1xq6rjf">
+                                <div class="margin__y-24">
                                   <fieldset class="_25bp3z" role="radiogroup">
                                     <legend class="_1wjt7fx">
                                       <div class="inline">
