--- a/wishlists.html
+++ b/wishlists.html
@@ -238,7 +238,7 @@
                                           class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_7ytxmo">
+                                            <div class="tab__checkbox-mr-16">
                                               <div class="_miupcl">
                                                 <div
                                                   class="img-middle"
@@ -309,7 +309,7 @@
                                           class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_7ytxmo">
+                                            <div class="tab__checkbox-mr-16">
                                               <div class="_miupcl">
                                                 <div
                                                   class="img-middle"
@@ -370,7 +370,7 @@
                                           class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_7ytxmo">
+                                            <div class="tab__checkbox-mr-16">
                                               <div class="_miupcl">
                                                 <div
                                                   class="img-middle"
@@ -433,7 +433,7 @@
                                           class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_7ytxmo">
+                                            <div class="tab__checkbox-mr-16">
                                               <div class="_miupcl">
                                                 <div
                                                   class="img-middle"
@@ -496,7 +496,7 @@
                                           class="explore-filter-menu__list-padding uyl8mnh dir dir-ltr"
                                         >
                                           <div class="flex">
-                                            <div class="_7ytxmo">
+                                            <div class="tab__checkbox-mr-16">
                                               <div class="_miupcl">
                                                 <div
                                                   class="img-middle"
